# F5-TTS-ComfyUI

./: README.md  __init__.py  pyproject.toml  requirements.txt
f5_model/: cfm.py  dataset.py  trainer.py  utils.py
f5_model/backbones/: dit.py  mmdit.py  unett.py
