[project]
name = "f5-tts-comfyui"
description = "a custom node for [a/F5-TTS](https://github.com/SWivid/F5-TTS)"
version = "1.0.0"
license = {file = "LICENSE"}
dependencies = ["accelerate>=0.33.0", "datasets", "einops>=0.8.0", "einx>=0.3.0", "ema_pytorch>=0.5.2", "faster_whisper", "funasr", "jieba", "jiwer", "librosa", "matplotlib", "pypinyin", "safetensors", "# torch>=2.0", "# torchaudio>=2.3.0", "torchdiffeq", "tqdm>=4.65.0", "transformers", "vocos", "wandb", "x_transformers>=1.31.14", "zhconv", "zhon", "cached_path", "pydub", "soundfile", "LangSegment", "numpy==1.26.4"]

[project.urls]
Repository = "https://github.com/AIFSH/F5-TTS-ComfyUI"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "F5-TTS-ComfyUI"
Icon = ""
